# moonlift

./: .gitignore  .gitmodules  AGENTS.md  ASDL2_REFACTOR_MAP.md  AUTHORING_WITH_MOONLIFT.md  BACKEND_FACT_RICH_REFACTOR.md  BACKEND_GAPS.md  BACK_LUAJIT_DESIGN.md  BACK_WIRE_FORMAT.md  BENCHMARK_RESULTS.md  CLAUDE.md  CLOSED_LANGUAGE_SEMANTIC_DECISIONS.md  CODEGEN_FINDINGS.md  COMPILER_PATTERN.md  COMPLETE_LANGUAGE_CHECKLIST.md  CONSTANT_EXPRESSION_SUBSET.md  CONTRIBUTING.md  CONVENTIONS.md  CURRENT_IMPLEMENTATION_STATUS.md  CURRENT_TASK.md  C_BACKEND_DESIGN.md  C_FRONTEND_DESIGN.md  C_INTEROP_DESIGN.md  Cargo.toml  DESIGN_PHILOSOPHY.md  FILE_NAMING.md  HOSTED_CONTINUATION_LANGUAGE_PLAN.md  HOST_ARENA_ABI_DESIGN.md  HOST_EXPOSURE_PERFORMANCE_DESIGN.md  HOST_VALUE_API_DESIGN.md  HOST_VIEW_ZERO_COPY_ABI_DESIGN.md  HOWTO.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_STATUS.md  LANGUAGE_REFERENCE.md  LLPVM_GUIDE.md  LSP_INTEGRATION_CHECKLIST.md  LSP_INTEGRATION_DESIGN.md  LUAJIT_HOSTED_INTEGRATION.md  LUAJIT_IR.md  (+248 more)
archived/: BLOCKER_RESOLUTION_REPORT.md  CURRENT_TASK.md  IMPLEMENTATION_STATUS.md  README_BACK_LOWER.md  struct-conversion.md
back/: dasm_lib.c
benchmarks/: FINDINGS.md  README.md  bench_backend_kernel_case.lua  bench_backend_sequence_probe.lua  bench_c_frontend_vs_gcc.lua  bench_c_vs_cranelift.lua  bench_compile_back_validate_ll.lua  bench_cranelift_vs_dynasm.lua  bench_cranelift_vs_dynasm_harness.lua  bench_diagnostics.lua  bench_host_arena_abi.lua  bench_host_arena_native.lua  bench_isolate_kernel.lua  bench_json_cjson.lua  bench_json_dsl_vs_legacy.lua  (+44 more)
(+2487 files in other folders)
